Fix: resolve layout issues on small screens

--- a/styles/cta.css
+++ b/styles/cta.css
@@ -4,7 +4,8 @@
   flex-direction: column;
   align-items: flex-start;
   gap: .625rem;
-  background: url("../assets/images/cta-bg.png") no-repeat center center / cover;}
+  background: url("../assets/images/cta-bg.png") no-repeat center center / cover;
+}
 
 .cta-content {
   display: flex;
@@ -67,9 +68,9 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 750px) {
   .cta {
-    padding: 3.125rem;
+    padding: 3.125rem 1.5625rem;
   }
 
   .cta .cta-content {
