--- a/styles/features.css
+++ b/styles/features.css
@@ -142,7 +142,7 @@
 
 /************************* Media Queries *************************/
 /* Media Query for Mobile Devices */
-@media (max-width: 87.5rem) {
+@media (max-width: 1400px) {
   .features-cards {
     gap: 1rem;
     width: 46rem;
@@ -150,7 +150,7 @@
   }
 }
 
-@media (max-width: 84.375rem) {
+@media (max-width: 1350px) {
   .features-cards {
     gap: .5rem;
     width: 45.5rem;
@@ -158,7 +158,7 @@
   }
 }
 
-@media (max-width: 81.25rem) {
+@media (max-width: 1300px) {
   .features {
     flex-direction: column;
   }
@@ -172,9 +172,31 @@
   }
 }
 
-@media (max-width: 78.125rem) {
+@media (max-width: 1250px) {
   .features {
     flex-direction: column;
     padding: 1rem 1.5625rem;
+  }
+}
+
+@media (max-width: 750px) {
+  .features {
+    padding: 0.5rem 0.75rem;
+  }
+
+  .features-cards {
+    flex-direction: column;
+    flex-wrap: unset;
+  }
+
+  .features-card {
+    width: auto;
+    height: auto;
+    padding: 1rem;
+    gap: 1rem;
+  }
+
+  .features-card-image {
+    width: 100%;
   }
 }
