--- a/styles/footer.css
+++ b/styles/footer.css
@@ -157,7 +157,7 @@ footer {
 }
 
 /************************* Media Queries *************************/
-@media screen and (max-width: 78.125rem) {
+@media screen and (max-width: 1250px) {
   footer {
     padding: 1rem 1.5625rem;
     gap: 1.25rem;
@@ -168,7 +168,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 68.75rem) {
+@media screen and (max-width: 1100px) {
   footer {
     gap: 1.25rem;
   }
@@ -183,7 +183,11 @@ footer {
   }
 }
 
-@media screen and (max-width: 46.875rem) {
+@media screen and (max-width: 750px) {
+  footer {
+    padding: 0.5rem 0.75rem;
+  }
+
   .footer-legal {
     flex-direction: column;
     align-items: center;
@@ -197,8 +201,19 @@ footer {
   .footer-links-list {
     width: 100%;
     min-width: 100%;
-    gap: 0;
+    gap: 1rem;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .footer-subscription {
+    width: 100%;
+    padding: 0;
+  }
+
+  .footer-subscription input {
+    width: 100%;
+    padding: 0;
   }
 }
