--- a/styles/header.css
+++ b/styles/header.css
@@ -4,7 +4,7 @@ header {
   justify-content: space-between;
   align-items: center;
   background: #0b9586;
-  letter-spacing: .0586rem;
+  letter-spacing: 0.0586rem;
 }
 
 /************************* Logo *************************/
@@ -19,17 +19,17 @@ header .logo {
 /************************* Links *************************/
 nav {
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
   min-width: 28.125rem;
 }
 
 nav a {
   display: flex;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   align-items: center;
   justify-content: center;
-  gap: .625rem;
-  border-radius: .3125rem;
+  gap: 0.625rem;
+  border-radius: 0.3125rem;
   white-space: nowrap;
   flex: 1;
   transition: all 0.3s ease;
@@ -47,7 +47,7 @@ nav a:hover {
 }
 
 nav a:hover > span {
-  text-shadow: 0rem 0rem .1875rem #fff;
+  text-shadow: 0rem 0rem 0.1875rem #fff;
 }
 
 /************************* Contact *************************/
@@ -55,7 +55,7 @@ nav a:hover > span {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .contact {
@@ -85,16 +85,21 @@ nav a:hover > span {
 .mobile-first-row {
   display: none;
 }
-@media screen and (max-width: 78.125rem) {
+
+@media screen and (max-width: 1250px) {
   header {
     padding: 1rem 1.5625rem;
   }
 }
 
-@media screen and (max-width: 62.5rem) {
+@media screen and (max-width: 1000px) {
   header {
     flex-direction: column;
     gap: 1rem;
+  }
+
+  .number {
+    text-align: end;
   }
 
   nav {
@@ -116,5 +121,23 @@ nav a:hover > span {
   .mobile-first-row .logo,
   .mobile-first-row .contact-ctn {
     display: block;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  nav {
+    gap: 0;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+    min-width: 0;
+  }
+
+  nav a {
+    justify-content: start;
+  }
+
+  header {
+    padding: 0.5rem 0.75rem;
   }
 }
