--- a/styles/hero.css
+++ b/styles/hero.css
@@ -155,13 +155,13 @@
 }
 
 /************************* Media Queries *************************/
-@media screen and (max-height: 50rem) {
+@media screen and (max-height: 800px) {
   .hero-content-ctn {
     padding-top: 0;
   }
 }
 
-@media screen and (max-width: 78.125rem) {
+@media screen and (max-width: 1250px) {
   .progress-ctn {
     padding: 2.5rem 1.5625rem 0;
   }
@@ -170,7 +170,7 @@
   }
 }
 
-@media screen and (max-width: 68.75rem) {
+@media screen and (max-width: 1100px) {
   .hero {
     align-items: center;
   }
@@ -192,14 +192,19 @@
   }
 }
 
-@media screen and (max-width: 50rem) {
+@media screen and (max-width: 800px) {
   .hero-content {
     width: calc(100% - 1.25rem);
   }
 }
 
-@media screen and (max-width: 43.75rem) {
+@media screen and (max-width: 750px) {
   .hero {
     height: 120vh;
+  }
+
+  .hero-btns {
+    flex-direction: column;
+    align-items: center;
   }
 }
