--- a/styles/our-approach.css
+++ b/styles/our-approach.css
@@ -39,20 +39,24 @@
 }
 
 /************************** Media Queries **************************/
-@media screen and (max-width: 68.75rem) {
+@media screen and (max-width: 1100px) {
   .our-approach-content {
     padding: 2rem;
   }
 }
 
-@media screen and (max-width: 59.375rem) {
+@media screen and (max-width: 950px) {
   .our-approach-content {
     width: 90%;
     padding: 1.5rem;
   }
 }
 
-@media screen and (max-width: 48rem) {
+@media screen and (max-width: 768px) {
+  .our-approach {
+    padding: 1rem;
+  }
+
   .our-approach-content h1 {
     font-size: 2rem;
     letter-spacing: -0.04rem;
