--- a/styles/our-values.css
+++ b/styles/our-values.css
@@ -77,15 +77,38 @@
 }
 
 /************************** Media Queries *************************/
-@media screen and (max-width: 78.125rem) {
+@media screen and (max-width: 1250px) {
   .our-values {
     padding: 1rem 1.5625rem;
   }
 }
 
-@media screen and (max-width: 75rem) {
+@media screen and (max-width: 1200px) {
   .our-values-cards {
     flex-wrap: wrap;
     justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .our-values {
+    padding: 0.5rem 0.75rem;
+  }
+
+  .our-values-cards {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .our-values-card {
+    width: auto;
+    height: auto;
+    padding: 1rem;
+    gap: 1rem;
+  }
+
+  .our-values-card img {
+    width: auto;
+    height: auto;
   }
 }
